# synbiochallenges2026-public

./: .gitignore  .gitmodules  README.md  pyproject.toml  start_synbio.sh
data/: gfps_wt.fasta  previous_top_sequences.csv  sfgfp_sasa.json  sfgfp_wt.cif  sfgfp_wt.fasta
docker/: Dockerfile  build.sh  entrypoint.sh  smoke_test.sh  synenv.sh  synrun
docker/envs/mamba/: dnatools.yml  esm.yml  proteinmpnn.yml
env/: README.md  bootstrap.sh  smoke.sh  synenv.sh
run/conf/: config.yaml
run/conf/executor/: local.yaml
run/conf/params/: stages.yaml
run/conf/wt/: sfgfp.yaml
run/pipeline/: run_pipeline.py
scripts/: compute_sfgfp_sasa.py  download_weights.sh
src/synbio/: __init__.py
src/synbio/esmc/: __init__.py  cache.py  embed.py  extract.py  mlm.py  model.py  pocket.py
src/synbio/fold/: __init__.py  adapter.py  decision.py  geometry.py
src/synbio/generate/: __init__.py  apply.py  bias.py  combinatorial.py  emit.py  ligandmpnn_io.py  merge.py  pools.py  recharge.py  reconstruct.py  sample_positions.py  sampler.py  selection.py
src/synbio/io/: __init__.py  artifacts.py  constraints.py
src/synbio/orchestrator/: __init__.py  executor.py  manifest.py  runner.py  stage.py
src/synbio/portfolio/: __init__.py  eligibility.py  selection.py  submission.py
src/synbio/probes/: __init__.py  brightness_data.py  brightness_score.py  evaluate.py  isotonic.py  metrics.py  mutations.py  ridge.py  splits.py  stability_data.py
src/synbio/stability/: __init__.py  structure_votes.py
src/synbio/stages/: __init__.py  filter_brightness.py  fold_sanity.py  generate.py  (+6 more)
(+8 files in other folders)
