[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synbio"
version = "0.1.0"
description = "SynBio 2026 GFP design pipeline (P1 orchestrator skeleton)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14",
    "PyYAML>=6.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8", "freesasa>=2.2", "scikit-learn>=1.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
